--- a/cafe-menu-style.css
+++ b/cafe-menu-style.css
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 body {
     background-image: url(https://cdn.freecodecamp.org/curriculum/css-cafe/beans.jpg);
     font-family: sans-serif;
@@ -94,3 +93,4 @@ body {
   
   a:active {
     color: brown;
+  }
